# email-triage-env

./: Dockerfile  README.md  app.py  baseline_scores.json  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  validate.py
data/: emails.py
graders/: graders.py
server/: app.py
