[project]
name = "email-triage-openenv"
version = "1.0.0"
description = "Email triage OpenEnv environment"
authors = [{name = "edara manikanta"}]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv>=0.2.0"
]

[project.scripts]
server = "server.app:app"
